--- a/guestbook-app/setup/guestbook.service
+++ b/guestbook-app/setup/guestbook.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=GuestBook Backend
-After=mariadb.service
+#After=mariadb.service
 
 [Service]
 Environment=PORT=8080
 #EnvironmentFile=/opt/guestbook.env
-ExecStart=/opt/guestbook/LIVE-CODING/guestbook-app/setup/start.sh
-WorkingDirectory=/opt/guestbook/LIVE-CODING/guestbook-app/
+ExecStart=/bin/node bin/www
+WorkingDirectory=/opt/guestbook/guestbook-app/
 LimitNOFILE=4096
 IgnoreSIGPIPE=false
 KillMode=process
